syntax = "proto3";

package chat;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Psakine/chat-server/pkg/v1/chat;chat";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest{
    repeated string usernames = 1;

}
message CreateResponse{
  int64 Id = 1;
}

message DeleteRequest{
  int64 Id = 1;
}

message SendMessageRequest{
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}
